# Vixelcoin_system_v1

./: Cargo.toml  README.md  build.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/services/: cheems_scape_service.rs  mod.rs  vixelcoin_system.rs  whalexpace_service.rs
app/src/states/: cheems_scape_state.rs  mod.rs  state.rs  vixelcoin_system_state.rs  whalexpace_state.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
src/: lib.rs
tests/: gtest.rs
