[workspace]

members = ["client"]


[package]
name = "vixelcoin-system"
version = "0.1.0"
edition = "2021"

[dependencies]
vixelcoin-system-app = { path = "app" }

[build-dependencies]
vixelcoin-system-app = { path = "app" }
sails-rs = { version = "0.7.1", features = ["wasm-builder"] }
sails-idl-gen = "0.7.1"

[dev-dependencies]
vixelcoin-system = { path = ".", features = ["wasm-binary"] }
vixelcoin-system-client = { path = "client" }
sails-rs = { version = "0.7.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
